fix: input spacing

--- a/src/components/cmp-input/_input.scss
+++ b/src/components/cmp-input/_input.scss
@@ -52,15 +52,7 @@
 
   .input-wrapper {
     padding: 1.5rem 1.875rem 1.875rem;
-
-    @include media-breakpoint-up(sm) {
-      padding: 1.333rem 1.667rem 1.667rem;
-    }
   }
-}
-
-.form-group label {
-  color: #596D88;
 }
 
 .bg-grey-card {
